Chapter 9 — Listing 9.2: LegacyAPIProblems.java Demonstrates: Mutability of Date, zero-indexed months in Calendar,